apps/longhorn/deployment-oauth2-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  labels:
    app.kubernetes.io/name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      automountServiceAccountToken: false
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          imagePullPolicy: Always
          args:
            - --config=/etc/oauth2-proxy-configs/oauth2-proxy.conf
            - --skip-provider-button=false
            - --provider=oidc
            - --client-id=longhorn
            - --oidc-issuer-url=https://idm.jdmarble.net/oauth2/openid/longhorn
            - --code-challenge-method=S256
            - --whitelist-domain=longhorn.jdmarble.net
            - --email-domain=jdmarble.com
            - --cookie-expire=4h0m0s
            - --upstream=http://longhorn-frontend
            - --http-address=0.0.0.0:4180
            - --request-logging=true
            - --redirect-url=https://longhorn.jdmarble.net/oauth2/callback
          ports:
            - name: http
              containerPort: 4180
          resources:
            requests:
              memory: 64Mi
              cpu: 0.1m
            limits:
              cpu: 0.25m
              memory: 128Mi
          volumeMounts:
            - name: secret
              mountPath: /etc/oauth2-proxy-configs
      volumes:
        - name: secret
          secret:
            secretName: oauth2-proxy
