apps/longhorn/service-oauth2-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: longhorn-system
  name: oauth2-proxy
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: oauth2-proxy
