apps/longhorn/httproute-ui.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: longhorn-system
  name: ui
spec:
  parentRefs:
    - namespace: cilium
      name: jdmarble-net
  hostnames:
    - "longhorn.jdmarble.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy
          port: 80
